<resources>
    <string name="app_name">iampro</string>
    <string name="title_home">Home</string>
    <string name="whishlist_title">My WhishList</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="app_login">Login</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="notifications_title">My Notifications</string>
    <string name="add_product">Add Product</string>
    <array name="cat">
        <item>Select</item>
        <item>Other</item>
    </array>
    <plurals name="likes_count">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>
    <!-- home fragment    -->
    <string name="popular">Popular Movies</string>
    <string name="top_rated">Top Rated Movies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="element_text">Element</string>
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>
    <!--  tabsssssss      -->
    <string name="demand">Denamd</string>
    <string name="image">Image</string>
    <string name="product">Product</string>
    <string name="provide">Provide</string>
    <string name="user">User</string>
    <string name="video">Video</string>
    <string name="friend_request">Friend Request</string>
    <string name="my_purchase">My Purchase</string>
    <string name="my_sell">My Selling</string>
    <string name="change_password">Change Password</string>
    <string name="search_title">Search</string>
    <string name="cart_title">My Cart</string>
    <string name="message_title">My Chat</string>


    <string name="action_settings">Settings</string>


    <string name="tequila_name">Tequila</string>
    <string name="tequila_tagline">Is an alcoholic beverage</string>
    <string name="tequila_title">Tequila!</string>
    <string name="buy_now">BUY NOW</string>
    <string name="add_to_cart">ADD TO CART</string>

    <string name="chat">CHAT</string>
    <string name="favourite">FAVOURITE</string>
    <string name="currentpassword">Enter Current Password</string>
    <string name="newpassword">Enter New Password</string>
    <string name="confirmpassword">Enter Confirm Password</string>
    <string name="udashboard">User Dashboard</string>


    <!--  swipeview user-->
    <string name="my_cart">My Cart</string>
    <string name="delete">DELETE</string>

    <!-- chat  -->
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="err_msg_name">Enter full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="title_activity_chat_room_discussion">ChatRoomDiscussionActivity</string>


    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_register">New user, tap here to register !</string>
    <string name="register">Register</string>

    <string name="user_successfully_added">User successfully added!</string>
    <string name="user_unable_to_add">Unable to add user!</string>
    <string name="adding_user_to_db">Adding user to database.</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>

    <string name="font_family_roboto_light">sans-serif-thin</string>
    <string name="type_a_message">Type a message...</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="cancel">Cancel</string>
    <string name="action_gchat">Group Chat</string>

    <string name="message">Message</string>

    <string name="profile_desc">Rowan Sebastian Atkinson CBE is an English actor,  comedian and screenwriter</string>
    <string name="profile_title">Mr Bean</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>

    <!-- font families -->
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="got_it">Got It</string>
</resources>

