<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_search"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    tools:context=".user.ChangePasswordActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="7dp"
        android:background="@drawable/bg_search"
        card_view:cardMaxElevation="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:background="?android:selectableItemBackground"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="10dp"
                android:layout_gravity="center"
                android:src="@drawable/user_slide_info_message"
                app:civ_border_width="1dp"
                app:civ_border_color="#FF000000"/>
            <EditText
                android:id="@+id/et_currpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                android:hint="@string/currentpassword"/>
            <EditText
                android:id="@+id/et_newpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                android:hint="@string/newpassword"/>
            <EditText
                android:id="@+id/et_confpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                android:hint="@string/confirmpassword"/>

            <Button
                android:id="@+id/btn_cpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:padding="@dimen/card_margin"
                android:text="@string/change_password"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>