<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_top"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/btnchat_demand"
            android:textColor="@color/white"
            android:onClick="chat"
            android:layout_weight="1"
            android:layout_margin="13dp"
            android:text="@string/chat"/>
        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:background="@drawable/btnchat_demand"
            android:onClick="favourite"
            android:layout_weight="1"
            android:layout_margin="13dp"
            android:text="@string/favourite"/>
    </LinearLayout>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/direction_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        card_view:cardElevation="5dp"
        card_view:cardCornerRadius="10dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_names"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_weight="9"/>

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="dsfs"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_weight="9"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_300"></View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Categories:"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_weight="9"/>

                <TextView
                    android:id="@+id/tv_categories"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:layout_weight="9"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_300"></View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Cost:"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_weight="9"/>

                <TextView
                    android:id="@+id/tv_cost"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_weight="9"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_productdetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="10dp"
        android:layout_marginBottom="16dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Demand Details:"
                android:padding="10dp"
                android:textSize="18dp"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_300"></View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_demanddetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="details"
                    android:textSize="13dp"
                    android:textStyle="bold"
                    android:layout_weight="9"/>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_productproviderdetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="10dp"
        android:layout_marginBottom="16dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Demand Provider Detail:"
                android:padding="10dp"
                android:textSize="18dp"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_300"></View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="0dp"
                android:orientation="horizontal">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_image"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:padding="4dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/user_slide_info_message"
                    app:civ_border_width="1dp"
                    app:civ_border_color="#FF000000"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_demand_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="15sp"
                        android:text="@string/app_name"
                        android:padding="4dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tv_demand_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="4dp"
                        android:gravity="center"
                        android:text="@string/app_name"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_300"></View>
    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="10dp"
        android:layout_marginBottom="20dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_300"></View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="sendReview"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">
                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="63dp"
                    android:layout_height="63dp"
                    android:padding="13dp"
                    android:layout_gravity="left"
                    app:srcCompat="@drawable/ic_chat_black_24dp"/>
                <!-- <TextView
                     android:id="@+id/tv_costss"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="Cost:"
                     android:textSize="17dp"
                     android:textStyle="bold"
                     android:layout_weight="9"/> -->

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Write your review"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:padding="13dp"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_weight="9"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_300"></View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_review_demand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    </LinearLayout>